--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 $color-one: rgb(94, 44, 237) !important;
+$color-one-light: rgb(174,149,245) !important;
 $color-two: rgb(204, 17, 43) !important;
 $color-two-dark:rgb(116, 4, 16)!important;
 
@@ -8,6 +9,9 @@ $color-two-dark:rgb(116, 4, 16)!important;
     background-color: black;
 }
 
+.bg-color-one {
+    background-color: $color-one-light
+}
 .color-one {
     color: $color-one;
 }
@@ -68,9 +72,9 @@ input {
 
   .form-card  {
       border: 1px solid --muted;
-      -webkit-box-shadow: 0 0 2px grey;
-      box-shadow: 0 0 2px grey;
-      border-radius: 2rem !important;
+      -webkit-box-shadow: 0 0 1.5px grey;
+      box-shadow: 0 0 1.5px grey;
+      border-radius: 1rem !important;
 
     }
 
@@ -78,3 +82,55 @@ input {
     .small-text {
         font-size: .8rem;
     }
+
+
+    .imgContainer {
+        position: relative;
+        padding-top: 30vw !important;
+
+        @media (min-width: 992px) { 
+            padding-top: 30vw !important;
+         }
+
+    }
+
+    .sliderImgWrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: 2rem;
+    }
+
+    .sliderImg{
+        border-radius: 1.5rem;
+    }
+
+    .text-underline-one {
+        border-bottom: 3px solid $color-one;
+    }
+
+    .planCardHeader {
+        border-radius: 1rem 1rem 0rem 0rem;
+        border-color: $color-one;
+    }
+
+    .planCardFooter {
+        border-radius: 0rem 0rem 1rem 1rem;
+        border-color: $color-one;
+    }
+
+    .corner-ribbon{
+        z-index: 100;
+        width: 200px;
+        background: $color-one;
+        position: absolute;
+        top: 3%;
+        right: -32%;
+        text-align: center;
+        letter-spacing: 1px;
+        color: #f0f0f0;
+        transform: rotate(35deg);
+        -webkit-transform: rotate(35deg);
+      }
