--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+body,
+.v-application {
+  font-family: 'Poppins', sans-serif !important; }
+
+.v-application label.primary--text {
+  color: #5e2ced !important;
+  caret-color: #5e2ced !important; }
+
+.mini-heading {
+  font-size: 15px; }
+
+.big-heading {
+  font-size: 20px; }
+  @media (min-width: 768px) {
+    .big-heading {
+      font-size: 30px; } }
+
 .bg-black {
   background-color: black; }
 
@@ -105,7 +122,17 @@
     color: white !important; }
 
 .test {
-  height: 80vh;
-  overflow: scroll; }
+  height: 75vh;
+  overflow-y: scroll; }
+  .test::-webkit-scrollbar {
+    width: 4px; }
+  .test::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+    border-radius: 1rem; }
+  .test::-webkit-scrollbar-thumb {
+    background-color: #ae95f5 !important;
+    background-clip: padding-box;
+    border-radius: 1rem; }
 
 /*# sourceMappingURL=style.css.map */
