--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,12 @@ body,
   caret-color: #5e2ced !important; }
 
 .mini-heading {
-  font-size: 15px; }
+  font-size: 15px;
+  font-weight: 300; }
 
 .big-heading {
-  font-size: 20px; }
+  font-size: 20px;
+  font-weight: 700; }
   @media (min-width: 768px) {
     .big-heading {
       font-size: 30px; } }
