--- a/css/style.scss
+++ b/css/style.scss
@@ -19,9 +19,11 @@ body,
 
 .mini-heading {
     font-size: 15px;
+    font-weight: 300;
 }
 .big-heading {
     font-size: 20px;
+    font-weight: 700;
 
 
     @media (min-width: 768px) {   
