--- a/css/style.scss
+++ b/css/style.scss
@@ -104,9 +104,7 @@ body,
         position: relative;
         padding-top: 30vw !important;
 
-        @media (min-width: 992px) { 
-            padding-top: 30vw !important;
-         }
+        
 
     }
 
@@ -193,8 +191,6 @@ body,
     }
 
     .test {
-        height: 75vh;
-        overflow-y: scroll;
 
 
         &::-webkit-scrollbar {
@@ -218,6 +214,16 @@ body,
     
     }
 
+    .fixed-slider {
+        position: relative;
 
+        @media (min-width: 768px) { 
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            left: 0;   
+            height: 30vh;     
+        }
+    }
 
     
