--- a/css/style.scss
+++ b/css/style.scss
@@ -189,7 +189,7 @@ body,
             color:white !important
         }
     }
-
+/*
     .test {
 
 
@@ -214,6 +214,8 @@ body,
     
     }
 
+    */
+
     .fixed-slider {
         position: relative;
 
@@ -226,4 +228,8 @@ body,
         }
     }
 
+
+    .form-container {
+        margin-top: 50px;
+    }
     
