--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,19 @@ body,
       height: 30vh; } }
 
 .form-container {
-  margin-top: 50px; }
+  margin-top: 5px; }
+  @media (min-width: 768px) {
+    .form-container {
+      margin-top: 50px; } }
+
+.ml14 .line {
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background-color: #5e2ced !important;
+  transform-origin: 100% 100%;
+  bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
