--- a/css/style.scss
+++ b/css/style.scss
@@ -230,6 +230,22 @@ body,
 
 
     .form-container {
-        margin-top: 50px;
+        margin-top: 5px;
+
+        @media (min-width: 768px) { 
+            margin-top: 50px;
+        }
+
     }
     
+
+    .ml14 .line {
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        height: 2px;
+        width: 100%;
+        background-color: $color-one;
+        transform-origin: 100% 100%;
+        bottom: 0;
+      }
