--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body,
     */
 .fixed-slider {
   position: relative; }
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     .fixed-slider {
       position: -webkit-sticky;
       position: sticky;
@@ -176,5 +176,20 @@ body,
   background-color: #5e2ced !important;
   transform-origin: 100% 100%;
   bottom: 0; }
+
+.ml9 .letter {
+  display: inline-block; }
+
+.text-wrapper {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  top: 10px; }
+  @media (min-width: 768px) {
+    .text-wrapper {
+      top: 15px; } }
+
+.ml9 {
+  position: relative; }
 
 /*# sourceMappingURL=style.css.map */
