--- a/css/materialize-src/sass/materialize.scss
+++ b/css/materialize-src/sass/materialize.scss
@@ -14,3 +14,59 @@
 @import "components/global";
 @import "components/icons-material-design";
 @import "components/forms/forms";
+@import "components/forms/select";
+@import "components/forms/file-input";
+@import "components/forms/checkboxes";
+@import "components/forms/input-fields";
+@import "components/forms/radio-buttons";
+@import "components/forms/range";
+@import "components/forms/switches";
+@import "components/badges";
+@import "components/cards";
+@import "components/carousel";
+@import "components/chips";
+@import "components/collapsible";
+@import "components/datepicker";
+@import "components/dropdown";
+@import "components/icons-material-design";
+@import "components/materialbox";
+@import "components/modal";
+@import "components/navbar";
+@import "components/preloader";
+@import "components/pulse";
+@import "components/sidenav";
+@import "components/slider";
+@import "components/table_of_contents";
+@import "components/tabs";
+@import "components/tapTarget";
+@import "components/timepicker";
+@import "components/toast";
+@import "components/tooltip";
+@import "components/transitions";
+@import "components/typography";
+@import "components/waves";
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
