--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body,
   border-radius: 1rem !important; }
 
 .small-text {
-  font-size: .8rem; }
+  font-size: .8rem !important; }
 
 .imgContainer {
   position: relative;
